--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -16,7 +16,10 @@
     <div class="container mx-auto">
         <header>
             <nav class="flex justify-between">
-                <div class="logo-name flex items-center font-bold"><img class="logo" src="assets/logo.png" alt="">HANGRY</div>
+                <div class="logo-name flex items-center font-bold">
+                    <img class="logo" src="assets/logo.png" alt="">
+                    <h1>HANGRY</h1>
+                </div>
                 <ul class="navbar flex items-center">
                     <li>Home</li>
                     <li>About</li>
@@ -123,8 +126,8 @@
             </section>
         </main>
         <footer>
-            <div class="flex items-center justify-center">
-                ©️Hangry Corporations Limited, 2023.  All Rights Reserved.
+            <div class="flex items-center justify-center flex-col">
+                <p>©️2023, Hangry Inc. All Rights Reserved.</p>
             </div>
         </footer>
     </div>
