--- a/temperature-coverter/index.html
+++ b/temperature-coverter/index.html
@@ -5,25 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <title>Temperature converter</title>
 </head>
 <body>
-   
-   <form id="calcTemp" onsubmit="calculateTemp(); return false">
-        <label for="temp">Temperature Converter</label>
-        <br>
-        <input type="number" name="temp" id="temp" value="0">
-        <select name="temp_diff" id="temp_diff">
-            <option value="cel">°Celsius</option>
-            <option value="fah">°Fahrenheit</option>
-            <!--<option value="kel">Kelvin</option>-->
-        </select>
-        <br>
-        <input type="submit" name="temp" id="submit">
-        <br>
-        <span id="result"></span>
-   </form>
-
+   <div class="main-container">
+        <form id="calcTemp" onsubmit="calculateTemp(); return false">
+            <label for="temp"><h1>Temperature Converter</h1></label>
+            <br>
+            <input type="number" name="temp" id="temp" value="0">
+            <select name="temp_diff" id="temp_diff">
+                <option value="cel">° Celsius</option>
+                <option value="fah">° Fahrenheit</option>
+                <!--<option value="kel">Kelvin</option>-->
+            </select>
+            <br>
+            <input type="submit" name="convert" id="submit" value="Convert">
+            <br>
+           
+            <span id="result"></span>
+    </form>
+   </div>
     <script src="script.js"></script>
 </body>
 </html>
