--- a/portfolio-website/index.html
+++ b/portfolio-website/index.html
@@ -30,7 +30,7 @@
         <h2>Hi! I am</h2>
         <h1>Rayoti Kar</h1>
         <h4>CSE Undergraduate | Problem Solver | Front-end Web Developer | Graphic Designer</h4>
-        <a class="btn1" href="mailto:karrayoti@email.com">Resume</a>
+        <a class="btn1" href="https://drive.google.com/file/d/1CuZuj5jeFEUX1ShEDpfBhcqyTgCSHQAR/view?usp=share_link">Resume</a>
     </div>
 
     <div class="middle-container">
